Integration of GUI into new project
Review the design of the GUI with grid layout
Review of plotting functions and functionality of GUI
Analysis with ERA method complete integrated into GUI

--- a/config/simConfigurationDY.properties
+++ b/config/simConfigurationDY.properties
@@ -1,8 +1,6 @@
-#Simulation Configuration
-#Wed Jun 17 17:44:55 CEST 2015
-tolerance=0
-numberOfIntervals=0
+outputFormat=.h5
+solver=Rkfix2
+stopTime=6
 startTime=0
-stopTime=0
-method=dassl
-outputFormat=.mat
+numberOfIntervals=1000
+tolerance=0.0001
