--- a/config/simConfigurationOMC.properties
+++ b/config/simConfigurationOMC.properties
@@ -1,8 +1,6 @@
-#Simulation Configuration
-#Fri Aug 14 17:58:36 CEST 2015
-tolerance=0.001
-numberOfIntervals=1000
+outputFormat=.h5
+solver=dassl
+stopTime=5
 startTime=0
-stopTime=10
-method=dassl
-outputFormat=.mat
+numberOfIntervals=500
+tolerance=0.00001
