--- a/config/simResources.properties
+++ b/config/simResources.properties
@@ -1,6 +1,6 @@
-modelPath=/Users/fran_jo/PhD_CIM/PYTHON/ScriptMEE/models
-libraryPath=/Users/fran_jo/PhD_CIM/PYTHON/ScriptMEE/models
-modelFile=FirstOrderSteady.mo
-modelName=FirstOrderSteady
-libraryFile=FirstOrderSteady
-outputPath=/Users/fran_jo/PhD_CIM/PYTHON/ScriptMEE/res
+modelFile=IEEENetworks.mo
+modelName=IEEE_9Bus
+libraryFile=PowerSystems.mo
+outputPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/res/omc
+modelPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/model
+libraryPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/model
