--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
-encoding//src/gui/meegui_qt.py=utf-8
+encoding//old/meegui_qt.py=utf-8
+encoding//src/gui/matplotlibwidget.py=utf-8
 encoding//src/guiqt/GUIDevelopment2.py=utf-8
+encoding//src/guiqt/MAE3.py=utf-8
