Test of the gui for configuration and resources

--- a/config/simConfigurationOMC.properties
+++ b/config/simConfigurationOMC.properties
@@ -1,6 +1,6 @@
-outputFormat=.h5
+outputFormat=.mat
 solver=dassl
-stopTime=5
+stopTime=10
 startTime=0
-numberOfIntervals=500
-tolerance=0.00001
+numberOfIntervals=1000
+tolerance=0.0001
