--- a/config/simResources.properties
+++ b/config/simResources.properties
@@ -1,6 +1,6 @@
 modelFile=IEEENetworks.mo
 modelName=IEEE_9Bus
-libraryFile=PowerSystems.mo
+libraryFile=package.mo
 outputPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/res/omc
 modelPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/model
-libraryPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/model
+libraryPath=C:/Users/fragom/iTESLA/ipsl/iPSL
