Icons and new gui for the framework
To be cleaned

--- a/config/simResources.properties
+++ b/config/simResources.properties
@@ -1,6 +1,7 @@
-modelFile=IEEENetworks.mo
-modelName=IEEE_9Bus
-libraryFile=package.mo
-outputPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/res/omc
-modelPath=C:/Users/fragom/PhD_CIM/PYTHON/SimuGUI/model
-libraryPath=C:/Users/fragom/iTESLA/ipsl/iPSL
+modelFile=
+modelName=
+cimPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\model
+libraryFile=
+outputPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\res
+modelPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\model
+libraryPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\lib
