Update GUI for solvers and simulation
Manage properties for resources corrected
Manage properties for config corrected
Gui for simulation loads models and simulate with OMC
Gui for simulation includes progress bar

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ model/dsmodel.c
 \.idea/inspectionProfiles/
 
 \.idea/
+*.project
+config/simResources.properties
+config/simConfigurationDY.properties
+config/simConfigurationOMC.properties
