--- a/config/simConfigurationDY.properties
+++ b/config/simConfigurationDY.properties
@@ -1,6 +1,6 @@
-outputFormat=.h5
-solver=Rkfix2
-stopTime=6
+outputFormat=.mat
+stopTime=10
 startTime=0
-numberOfIntervals=1000
+numberOfIntervals=500
 tolerance=0.0001
+method=dassl
