--- a/config/simResources.properties
+++ b/config/simResources.properties
@@ -1,7 +1,7 @@
-modelFile=
-modelName=
+modelFile=none
+modelName=none
 cimPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\model
-libraryFile=
+libraryFile=none
 outputPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\res
-modelPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\model
-libraryPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\lib
+modelPath=C:\Users\fragom\PhD_CIM\OpenIPSL\Application Examples
+libraryPath=C:\Users\fragom\PhD_CIM\OpenIPSL\OpenIPSL
