Tree View for result files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ model/dsmodel.c
 config/simResources.properties
 config/simConfigurationDY.properties
 config/simConfigurationOMC.properties
+
+*.properties
