--- a/config/simResources.properties
+++ b/config/simResources.properties
@@ -1,7 +1,7 @@
 modelFile=none
 modelName=none
-cimPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\model
+cimPath=/Users/fran_jo/Desktop/PhD_CODE/SimuGUI/res/network
 libraryFile=none
-outputPath=C:\Users\fragom\PhD_CIM\PYTHON\SimuGUI\res
-modelPath=C:\Users\fragom\PhD_CIM\OpenIPSL\Application Examples
-libraryPath=C:\Users\fragom\PhD_CIM\OpenIPSL\OpenIPSL
+outputPath=/Users/fran_jo/Desktop/PhD_CODE/SimuGUI/res
+modelPath=/Users/fran_jo/Desktop/PhD_CODE/SimuGUI/model
+libraryPath=/Users/fran_jo/Desktop/OpenIPSL/OpenIPSL
