Cleaning and integration of analysis methods
Integration of mode estimation routine calling matlab
use of thread to call matlab process
Cleaning folders, we need to get rid of old code

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
-encoding//old/meegui_qt.py=utf-8
+encoding//old/gui/meegui_qt.py=utf-8
 encoding//src/gui/matplotlibwidget.py=utf-8
 encoding//src/guiqt/GUIDevelopment2.py=utf-8
 encoding//src/guiqt/MAE3.py=utf-8
