New form for Linearization and new scripts
To handle linearization methods from differen compilers

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>SimuGUI</name>
 	<comment></comment>
 	<projects>
+		<project>PyCIM</project>
 		<project>ScriptMAE</project>
 		<project>ScriptMEE</project>
 	</projects>
