improvement of gui, plot multiple signals,  rename package and classes

--- a/config/simConfigurationOMC.properties
+++ b/config/simConfigurationOMC.properties
@@ -1,6 +1,7 @@
 outputFormat=.mat
-stopTime=30
+method=Rkfix2
+fixStepSize=0.01
 startTime=0
-numberOfIntervals=1000
-tolerance=0.0001
-method=dassl
+numberOfIntervals=-1
+tolerance=0.001
+stopTime=60
