--- a/config/simConfigurationDY.properties
+++ b/config/simConfigurationDY.properties
@@ -1,6 +1,7 @@
 outputFormat=.mat
-stopTime=10
-startTime=0
-numberOfIntervals=500
-tolerance=0.0001
 method=dassl
+fixStepSize=-1
+startTime=0
+numberOfIntervals=1000
+tolerance=0.000001
+stopTime=30
